--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,12 +1,9 @@
-
-<main>
+<main class="bg-img">
     <article>
         <header>
             <img src="assets/images/placeholder.jpg" class="img-responsive w-100">
         </header>
     </article>
 </main>
-
-
 
 
