--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+<nav class="navbar navbar-expand-md navbar-default">
     <!-- Brand -->
     <a class="navbar-brand" href="#">
         <img src="assets/images/logo.png" width="75" class="img-responsive rounded" alt="">
@@ -11,21 +11,20 @@
   
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        
         <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink='/home'>Home</a></li>
             
             <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
 
-            <li class="nav-item"><a class="nav-link" href="#">Register</a></li> 
+            <li class="nav-item"><a class="nav-link" href="#">Language</a></li> 
         </ul>
 
         <ul class="navbar-nav ml-auto">    
-            <li class="nav-item"><a class="nav-link" href="#">Register</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink='/register'>Register</a></li>
 
             <li class="nav-item"><a class="nav-link" href="#">Login</a></li>
         </ul>
 
     </div>
-  </nav>
+</nav>
 <router-outlet></router-outlet>
