--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
         <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" routerLink='/home'>Home</a></li>
             
-            <li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink='/about'>About us</a></li>
 
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</a>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Submit</button>
+                        <button type="button" class="btn btn-primary" routerLink="/profiles"  data-dismiss="modal" (click)="save()">Submit</button>
                     </div>
                 </div>
             </div>
