--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -4,10 +4,6 @@ td textarea {
 td textarea.box {
     border: none;
 }
-td textarea.box:focus {
-    margin-top: -10px;
-    height: 260px;
-}
 td textarea:hover {
     margin-top: -10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19),
@@ -20,7 +16,21 @@ td textarea:focus {
     inset 1px 1px 18px aquamarine,
     inset -5px -5px 10px snow;
 }
+td textarea:hover::-webkit-scrollbar {
+    width: 8px;
+}
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
 /* ==================================================================================== */
+
 legend.scheduler-border {
     width:inherit; 
     padding:0 10px;
@@ -40,7 +50,7 @@ div.form-group > textarea {
     outline: none;
     resize: none;
 }
-input {
+input, select {
     outline: 0;
     border-width: 0 0 1.5px;
     border-color: lightgray;
