--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -1,1 +1,13 @@
-<p>profiles works!</p>
+<div class="container-fluid">
+    <div class="row card-column">
+        <div *ngFor="let img of imgUrls; index as i" class="card col-3 p-0 mt-4">
+            <img class="card-img-top img-fluid" src={{img}} alt="Card image">
+            <div class="card-body">
+                <h4 class="text-center">name - <code>19</code></h4>
+                <h6 class="text-center">dob</h6>
+                <h6 class="text-center">star</h6>
+            </div>
+            <div class="card-footer text-right"><a routerLink="/profiledetail">View profile</a></div>
+        </div>
+    </div>
+</div>
