--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -13,10 +13,10 @@
             </ul>
         </aside>
     </div>
-    <div class="container row offset-md-4 mt-5">
+    <div class="container row col-5 offset-md-4 mt-5">
         <address >6/14, South Saliya Street, Koranad, Mayiladuthurai - <code>609001</code></address>
     </div>
-    <div class="container row offset-md-5">
+    <div class="container row col-5 offset-md-5">
         &copy;Copyrights by ammu
     </div>
 </footer>
