--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,25 @@
-<main class="bg-img">
-    <article>
-        <header>
-            <img src="assets/images/placeholder.jpg" class="img-responsive w-100">
-        </header>
-    </article>
-</main>
+<div class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner text-center">
+        <div class="carousel-item active">
+            <div class="d-flex w-100 align-items-center justify-content-center">
+                <img class="w-100" src="assets/images/c1.jpg"  width="1100" height="500">
+                <h1 class="">Text 1</h1>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="d-flex w-100 align-items-center justify-content-center">
+                <img class="w-100" src="assets/images/c2.jpg"  width="1100" height="500">
+                <h1>Text 2</h1>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <div class="d-flex w-100 align-items-center justify-content-center">
+                <img class="w-100" src="assets/images/c3.jpg"  width="1100" height="500">
+                <h1>Text 3</h1>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="container">
     <br>
