--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,33 +1,35 @@
-<nav class="navbar bg-dark navbar-expand-md navbar-dark">
+<nav class="navbar navbar-expand-md contact">
+    <p class="text-white mb-0">Prop: RajaSimman, Astrologer</p>
+    <div class="ml-auto text-white">
+        <p class="mb-0">
+            +91 9344737090 
+            <a href="mailto:amirtha4501@gmail.com" class="text-white">&nbsp;&nbsp; amirtha@gmail.com</a>
+        </p>
+    </div>
+</nav>
+<nav class="navbar navbar-expand-md main">
     <!-- Brand -->
-    <a class="navbar-brand" href="#">
-        <img src="assets/images/logo.png" width="75" class="img-responsive rounded" alt="">
-    </a>
-  
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+            <img src="assets/images/logo.png" width="75" class="img-responsive d-inline-block rounded" alt="">
+        </a>
+    </div>    
+    <h4 class="text-white mx-auto"><strong>RajaRoja</strong><br>Matrimony</h4>
+    
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
+        <!-- <span class="navbar-toggler-icon"></span> -->
+        👀
     </button>
   
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" routerLink='/home'>Home</a></li>
-            
-            <li class="nav-item"><a class="nav-link" routerLink='/about'>About us</a></li>
-
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Language</a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item text-dark" href="#">தமிழ்</a>
-                    <a class="dropdown-item text-dark" href="#">English</a>
-                </div>
-            </li> 
-        </ul>
-
         <ul class="navbar-nav ml-auto">    
+            <li class="nav-item"><a class="nav-link" routerLink='/home'>Home</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink='/about'>About us</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink='/profiles'>Profiles</a></li>
+            <li class="nav-item"><a class="nav-link" routerLink='/payments'>Payments</a></li>
             <li class="nav-item"><a class="nav-link" routerLink='/register'>Register</a></li>
-
             <li class="nav-item"><a class="nav-link" data-target="#login-modal" data-toggle="modal">Login</a></li>
         </ul>
  
