--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,9 +1,11 @@
 <nav class="navbar navbar-expand-md contact">
-    <p class="text-white mb-0">Prop: RajaSimman, Astrologer</p>
+    <p class="text-white mb-0"><strong>Prop: RajaSimman, Astrologer</strong></p>
     <div class="ml-auto text-white">
         <p class="mb-0">
-            +91 9344737090 
-            <a href="mailto:amirtha4501@gmail.com" class="text-white">&nbsp;&nbsp; amirtha@gmail.com</a>
+            <strong>
+                +91 9344737090 
+                <a href="mailto:rajarojamatrimony@gmail.com" class="text-white">&nbsp;&nbsp; rajarojamatrimony@gmail.com</a>
+            </strong>
         </p>
     </div>
 </nav>
@@ -14,16 +16,22 @@
             <img src="assets/images/logo.png" width="75" class="img-responsive d-inline-block rounded" alt="">
         </a>
     </div>    
-    <h4 class="text-white mx-auto"><strong>RajaRoja</strong><br>Matrimony</h4>
+    <h4 class="text-white mx-auto text-center">
+        <strong>RajaRoja</strong><br>
+        Matrimony<br>
+        <small>(For all castes)</small>
+    </h4>
+    
     
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <!-- <span class="navbar-toggler-icon"></span> -->
+        <span class="navbar-toggler-icon"></span>
         👀
     </button>
   
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
+        
         <ul class="navbar-nav ml-auto">    
             <li class="nav-item"><a class="nav-link" routerLink='/home'>Home</a></li>
             <li class="nav-item"><a class="nav-link" routerLink='/about'>About us</a></li>
