Added styles to header & footer and modified about component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,22 +1,30 @@
-<footer class="jumbotron">
-    <div class="container row">
-        <section class="col-md-7 offset-md-1">
-            <h4>About</h4>
-            Add some information about the album below, the author, or any other background context. Make it a few sentences long so folks can pick up some informative tidbits. Then, link them off to some social networking sites or contact information.
-        </section>
-        <aside class="col-md-2 offset-md-2">
-            <h4>Contact</h4>
-            <ul class="list-group list-unstyled">
-                <li class=""><a href="mailto:amirtha4501@gmail.com">Mail</a></li>
-                <li class=""><a href="">Whatsapp</a></li>
-                <li class=""><a href="">Facebook</a></li>
-            </ul>
-        </aside>
+<footer>
+    <div class="container text-white text-center pt-4">
+        <h4><strong>ராஜா ரோஜா திருமண இணையம்</strong></h4>
     </div>
-    <div class="container row col-5 offset-md-4 mt-5">
-        <address >6/14, South Saliya Street, Koranad, Mayiladuthurai - <code>609001</code></address>
+    <div class="row text-center">
+        <div class="container">
+
+            <aside class="text-center text-white">
+                <p>(அனைத்து பிரிவினருக்கும்)</p>
+            </aside>
+
+            <section class="text-center text-white mt-4">
+                <strong>Contact</strong>
+                <p>
+                    <a href="mailto:rajarojamatrimony@gmail.com">rajarojamatrimony@gmail.com</a>
+                    <br>
+                    <a href="">+91 9944468585</a>
+                    <br>
+                    <a href="">+91 9095999111</a>
+                </p>
+            </section>
+        </div>
     </div>
-    <div class="container row col-5 offset-md-5">
+    <div class="container text-center text-white mt-2">
+        <address >6/14, South Saliya Street, Koranad, Mayiladuthurai - 609001</address>
+    </div>
+    <div class="container text-center text-white">
         &copy;Copyrights by ammu
     </div>
 </footer>
