--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,15 +18,13 @@
     </div>    
     <h4 class="text-white mx-auto text-center">
         <strong>RajaRoja</strong><br>
-        Matrimony<br>
-        <small>(For all castes)</small>
+        Matrimony
     </h4>
     
     
     <!-- Toggler/collapsibe Button -->
-    <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
-        👀
+    <button class="navbar-toggler rounded" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+        <i class="fa fa-bars"></i>
     </button>
   
     <!-- Navbar links -->
