--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,3 +1,8 @@
 a {
     text-decoration: none;
+    color: white;
+}
+
+footer {
+    background-image: linear-gradient(to right,  rgb(1, 107, 1), rgb(93, 196, 8), rgb(1, 107, 1));
 }
